--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,125 +25,59 @@ jobs:
       - name: 🔄 Checkout Terraform Provider Repository
         uses: actions/checkout@v3
 
-      - name: 📦 Update apt-get package list in container
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "apt-get update"
-
-      - name: 📦 Install essential packages in container
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-            apt-get update && apt-get install -y wget unzip git openjdk-17-jdk curl tar"
-
-      - name: 📥 Download and extract Go 1.22.3 in container
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-            apt-get update && apt-get install -y curl tar && \
-            curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz && \
-            tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz && \
-            rm go1.22.3.linux-386.tar.gz && \
-            /usr/local/go/bin/go version"
-
-      - name: 🛠 Sed go.mod for Go version fix
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod"
-
-      - name: 🛠 Run go mod tidy in container (with Go installed)
-        run: |
-            docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-              apt-get update && apt-get install -y curl tar && \
-              curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz && \
-              tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz && \
-              rm go1.22.3.linux-386.tar.gz && \
-              /usr/local/go/bin/go mod tidy"
-        
-
-      - name: 🛠 Build Terraform provider binary in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
-                  -e PATH=/usr/local/go/bin:$PATH \
-                  -e GOARCH=386 -e GOOS=linux i386/debian:bullseye bash -c "\
-                    apt-get update && apt-get install -y curl tar && \
-                    curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz && \
-                    tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz && \
-                    export GOPATH=/workspace/go && \
-                    mkdir -p \$GOPATH && \
-                    /usr/local/go/bin/go build -o terraform-provider-digicert"
-            
-
-      - name: 🛠 Copy Terraform provider to proper path in container
+      - name: 🧪 Full Terraform setup & test in one container
         run: |
           docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
-            -e GOPATH=/workspace/go -e GOARCH=386 -e GOOS=linux i386/debian:bullseye bash -c "\
-              mkdir -p $GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386 && \
-              cp terraform-provider-digicert $GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386"
+            -e GOPATH=/workspace/go \
+            -e MAVEN_HOME=/workspace/apache-maven-3.9.6 \
+            -e PATH=/workspace/apache-maven-3.9.6/bin:/usr/local/go/bin:$PATH \
+            i386/debian:bullseye bash -c "
+              set -e
 
-      - name: ⬇ Download Terraform 1.1.4 in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-                  apt-get update && apt-get install -y wget && \
-                  wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip"
-            
+              echo '📦 Installing packages...'
+              apt-get update && apt-get install -y \
+                wget unzip curl git openjdk-17-jdk tar
 
-      - name: ⬇ Unzip Terraform in container
-        run: |
-            docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-              apt-get update && apt-get install -y unzip && \
-              unzip terraform_1.1.4_linux_386.zip"
-                
+              echo '⬇️ Installing Go...'
+              curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz
+              tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz
+              rm go1.22.3.linux-386.tar.gz
 
-      - name: ⬇ Move Terraform binary to /usr/local/bin in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-                  apt-get update && apt-get install -y unzip && \
-                  mv terraform /usr/local/bin/ && \
-                  chmod +x /usr/local/bin/terraform"
-            
-      - name: ⬇ Verify Terraform installation in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-                  apt-get update && apt-get install -y unzip && \
-                  mv terraform /usr/local/bin/ && \
-                  terraform version"
-            
-      - name: ⬇ Download Maven 3.9.6 in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-                  apt-get update && apt-get install -y curl && \
-                  curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz"
-            
-      - name: ⬇ Extract Maven 3.9.6 in container
-        run: |
-                docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "\
-                  apt-get update && apt-get install -y tar && \
-                  tar -xzf apache-maven-3.9.6-bin.tar.gz"
-            
-      - name: ⬇ Verify Maven installation in container
-        run: |
-                    docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
-                      -e MAVEN_HOME=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6 \
-                      -e PATH=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6/bin:$PATH \
-                      i386/debian:bullseye bash -c "\
-                        apt-get update && apt-get install -y openjdk-11-jdk && \
-                        mvn -version"
-                
+              echo '🔧 Adjusting go.mod...'
+              sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod
 
-      - name: 🔄 Clone automation test repo
-        run: |
-          git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git
+              echo '🧹 Running go mod tidy...'
+              /usr/local/go/bin/go mod tidy
 
-      - name: ▶ Run initial Maven test suite inside container
-        run: |
-          docker run --rm -v ${{ github.workspace }}/DigicertTerraformTests:/workspace -w /workspace \
-            -e MAVEN_HOME=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6 \
-            -e PATH=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6/bin:$PATH \
-            i386/debian:bullseye bash -c "\
-              set -e; \
-              if ! mvn clean test -DsuiteXmlFile=testng.xml; then \
-                echo '⚠ Initial test failed, attempting rerun with failure.xml...'; \
-                if ! mvn test -DsuiteXmlFile=failure.xml; then \
-                  echo '❌ Final rerun also failed. Exiting with failure.'; \
-                  exit 1; \
-                fi; \
-              fi; \
-              echo '✅ Tests completed successfully.' \
+              echo '🛠 Building Terraform provider...'
+              mkdir -p /workspace/go
+              /usr/local/go/bin/go build -o terraform-provider-digicert
+
+              echo '⬇️ Installing Terraform...'
+              wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip
+              unzip terraform_1.1.4_linux_386.zip
+              mv terraform /usr/local/bin/
+              terraform version
+
+              echo '⬇️ Installing Maven...'
+              curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+              tar -xzf apache-maven-3.9.6-bin.tar.gz
+
+              echo '✅ Maven installed:'
+              apache-maven-3.9.6/bin/mvn -version
+
+              echo '🔄 Cloning test repository...'
+              git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git
+
+              echo '▶ Running Maven tests...'
+              cd DigicertTerraformTests
+              if ! ../apache-maven-3.9.6/bin/mvn clean test -DsuiteXmlFile=testng.xml; then
+                echo '⚠️ Test failed. Retrying with failure.xml...'
+                if ! ../apache-maven-3.9.6/bin/mvn test -DsuiteXmlFile=failure.xml; then
+                  echo '❌ Tests failed again.'
+                  exit 1
+                fi
+              fi
+
+              echo '✅ All tests passed.'
             "
