--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,63 +25,61 @@ jobs:
       - name: 🔄 Checkout Terraform Provider Repository
         uses: actions/checkout@v3
 
-      - name: 🧪 Full Terraform setup & test in one container
+      - name: 🚀 Run Terraform build & tests inside linux/386 container
         run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
-            -e GOPATH=/workspace/go \
-            -e MAVEN_HOME=/workspace/apache-maven-3.9.6 \
-            -e PATH=/workspace/apache-maven-3.9.6/bin:/usr/local/go/bin:$PATH \
-            i386/debian:bullseye bash -c "
-              set -e
-      
-              # Update & install necessary packages
-              apt-get update && apt-get install -y wget unzip curl git openjdk-17-jdk tar
-      
-              # Install Go
-              curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz
-              tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz
-              rm go1.22.3.linux-386.tar.gz
-      
-              # Fix go.mod Go version if needed
-              sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod
-      
-              # Fix invalid Go import paths by removing '@version' suffix
-              echo '🔍 Fixing invalid Go import paths...'
-              find . -name '*.go' -exec sed -i -E 's#(@[0-9]+\.[0-9]+(\.[0-9]+)?(-[a-z0-9]+)?)##g' {} +
-      
-              # Tidy go modules
-              /usr/local/go/bin/go mod tidy
-      
-              # Build the provider
-              mkdir -p /workspace/go
-              /usr/local/go/bin/go build -o terraform-provider-digicert
-      
-              # Install Terraform CLI
-              wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip
-              unzip terraform_1.1.4_linux_386.zip
-              mv terraform /usr/local/bin/
-              terraform version
-      
-              # Download and extract Maven
-              curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
-              tar -xzf apache-maven-3.9.6-bin.tar.gz
-      
-              # Verify Maven installation
-              apache-maven-3.9.6/bin/mvn -version
-      
-              # Clone the test repository
-              git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git
-      
-              # Run Maven tests with retry logic
-              cd DigicertTerraformTests
-              if ! apache-maven-3.9.6/bin/mvn clean test -DsuiteXmlFile=testng.xml; then
-                echo '⚠️ Test failed. Retrying with failure.xml...'
-                if ! apache-maven-3.9.6/bin/mvn test -DsuiteXmlFile=failure.xml; then
-                  echo '❌ Tests failed again.'
-                  exit 1
-                fi
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "$(cat <<'EOF'
+            set -e
+
+            echo '📦 Installing dependencies...'
+            apt-get update && \
+            apt-get install -y wget unzip git openjdk-17-jdk curl tar || \
+            (apt-get update --fix-missing && apt-get install -y wget unzip git openjdk-17-jdk curl tar)
+
+            echo '📥 Installing Go 1.22.3...'
+            curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz &&
+            tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz &&
+            export PATH=/usr/local/go/bin:$PATH &&
+            export GOPATH=/workspace/go &&
+            mkdir -p "$GOPATH" &&
+            export PATH="$PATH:$GOPATH/bin" &&
+            export GOARCH=386 &&
+            export GOOS=linux &&
+            go version
+
+            echo '🛠 Tidying and building Terraform provider...'
+            cd /workspace &&
+            sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod &&
+            go mod tidy &&
+            go build -o terraform-provider-digicert &&
+            mkdir -p "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386" &&
+            cp terraform-provider-digicert "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386"
+
+            echo '⬇ Installing Terraform 1.1.4...'
+            wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip &&
+            unzip terraform_1.1.4_linux_386.zip &&
+            mv terraform /usr/local/bin/ &&
+            terraform version
+
+            echo '⬇ Installing Maven 3.9.6...'
+            curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
+            tar -xzf apache-maven-3.9.6-bin.tar.gz &&
+            export MAVEN_HOME=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6 &&
+            export PATH="$MAVEN_HOME/bin:$PATH" &&
+            mvn -version
+
+            echo '🔄 Cloning automation test repo...'
+            git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git &&
+            cd DigicertTerraformTests
+
+            echo '▶ Running initial Maven test suite...'
+            if ! mvn clean test -DsuiteXmlFile=testng.xml; then
+              echo '⚠ Initial test failed, attempting rerun with failure.xml...'
+              if ! mvn test -DsuiteXmlFile=failure.xml; then
+                echo '❌ Final rerun also failed. Exiting with failure.'
+                exit 1
               fi
-      
-              echo '✅ All tests passed.'
-            "
-      
+            fi
+
+            echo '✅ Tests completed successfully.'
+          EOF
+          )"
