--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,18 +63,9 @@ jobs:
             echo '⬇ Installing Maven 3.9.6...'
             curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
             tar -xzf apache-maven-3.9.6-bin.tar.gz &&
-
-            export MAVEN_HOME=/workspace/apache-maven-3.9.6
-            export PATH="$MAVEN_HOME/bin:$PATH"
-
-            echo "Checking mvn location:"
-            which mvn
-
-            echo "Listing contents of MAVEN_HOME directory:"
-            ls -l $MAVEN_HOME
-
+            export MAVEN_HOME=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6 &&
+            export PATH="$MAVEN_HOME/bin:$PATH" &&
             mvn -version
-
 
             echo '🔄 Cloning automation test repo...'
             git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git &&
